--- a/Server/Views/books/details.ejs
+++ b/Server/Views/books/details.ejs
@@ -8,7 +8,7 @@
             <form class="form" method="post">
               <div class="form-group">
                 <label for="NameTextField">Title</label>
-                <input type="text" class="form-control" id="NameTextField"
+                <input type="text" class="form-control" id="NameTextField" 
                 placeholder="Book Name" name="title" value="<%= books.Title %>" required>
               </div>
               <div class="form-group">
@@ -26,8 +26,13 @@
                 <input type="text" class="form-control" id="GenreTextField"
                 placeholder="Book Genre" name="genre" value="<%= books.Genre %>"  required>
               </div>
+              
+              <% if (title == 'Edit') { %>
+                <button id="editButton" type="submit" class="btn btn-primary"><i class="fa fa-check-square-o"></i> Submit</button>
+                <% } else {%>
+                <button id="addButton" type="submit" class="btn btn-primary"><i class="fa fa-check-square-o"></i> Add</button>
+                <% } %>                        
 
-              <button type="submit" class="btn btn-primary"><i class="fa fa-check-square-o"></i> Submit</button>
               <a href="/books" class="btn btn-warning"><i class="fa fa-undo"></i> Cancel</a>
             </form>
         </div>
