--- a/Server/Views/partials/header.ejs
+++ b/Server/Views/partials/header.ejs
@@ -10,7 +10,9 @@
      <link rel="stylesheet" href="/Content/app.css">
   </head>
   <body>
-
+    <h1>COMP229-M2022-MidTerm-300644707 <br>
+      Alexandru Capatina <br>
+    Typescript version</h1>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="/"><i class="fa fa-bookmark-o"></i> My Favourite Books</a>
